2011-12-21:
    * get rid of CookieSession
    * use TimeDuration, IntervalWidget, TimeDurationWidget and
      ConstrainedSpinBox from wt-classes

2011-12-19:
    * started Changelog
    * allow to use with openssl
    * add VERSION, README and INSTALL files
