@@ -1,3 +1,7 @@
+2011-12-30:
+    * use URL library from wt-classes
+    * add MainWidget
+
 2011-12-21:
     * get rid of CookieSession
     * use TimeDuration, IntervalWidget, TimeDurationWidget and
